--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Knowledge Base</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Knowledge Base</h1>
-    <ul>
-        <li><a href="topic1.md">Topic 1</a></li>
-        <li><a href="topic2.md">Topic 2</a></li>
-        <!-- 更多主题链接 -->
-    </ul>
+    <header>
+        <h1>Welcome to My Knowledge Base</h1>
+        <nav>
+            <ul>
+                <li><a href="Topics/topic1.html">Topic 1</a></li>
+                <li><a href="Topics/topic2.html">Topic 2</a></li>
+                <li><a href="Topics/topic3.html">Topic 3</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2>Overview</h2>
+        <p>This is a collection of knowledge on various topics. Click the links above to explore!</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 My Knowledge Base</p>
+    </footer>
 </body>
 </html>
