--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <main>
         <h2>Overview</h2>
         <p>This is a collection of knowledge on various topics. Click the links above to explore!</p>
+        <img src="image/test1.jpeg" alt="test Image" width="500" height="300">
     </main>
     <footer>
         <p>&copy; 2024 My Knowledge Base</p>
