--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <h2>Overview</h2>
         <p>This is a collection of knowledge on various topics. Click the links above to explore!</p>
         <img src="image/test1.jpeg" alt="test Image" width="500" height="300">
+        <h2>Documents</h2>
+        <p>You can view the PDF document below:</p>
+        <canvas id="pdf-canvas"></canvas>
         <a href="documents/math.pdf" target="_blank">Download PDF Document</a>
     </main>
     <footer>
