--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <a href="documents/math.pdf" target="_blank">Download PDF Document</a>
         <h2>Documents</h2>
         <p>You can view the PDF document below:</p>
-        <canvas id="pdf-canvas"></canvas> 
+        <canvas id="pdf-canvas" style="border: 1px solid black;"></canvas> 
     </main>
     <footer>
         <p>&copy; 2024 My Knowledge Base</p>
     </footer>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/main.js" defer></script>
 </body>
 </html>
