--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Knowledge Base</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
+    <script src="https://unpkg.com/pdfjs-dist@latest/build/pdf.js"></script>
 </head>
 <body>
     <header>
