--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <header>
         <h1>Welcome to My Knowledge Base</h1>
         <nav>
+            <a href="#about">关于我</a>
+            <a href="#projects">项目</a>
+            <a href="#contact">联系方式</a>
+        </nav>
+        <nav>
             <ul>
                 <li><a href="Topics/topic1.html">Topic 1</a></li>
                 <li><a href="Topics/topic2.html">Topic 2</a></li>
