--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Welcome to My Knowledge Base</h1>
         <nav>
-            <a href="#about">关于我</a>
+            <a href="#about">About me</a>
             <a href="#projects">项目</a>
             <a href="#contact">联系方式</a>
         </nav>
@@ -32,6 +32,27 @@
         <p>You can view the PDF document below:</p>
         <canvas id="pdf-canvas" style="border: 1px solid black;"></canvas> 
     </main>
+
+    <section id="about">
+        <h2>About me</h2>
+        <p>Hello! I am a student with a passion for information and computer science and mathematical analysis</p>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>item 1：Describe the content and purpose of item 1</li>
+            <li>item 2：Describe the content and purpose of item 2</li>
+            <li>item 3：Describe the content and purpose of item 3</li>
+        </ul>
+    </section>
+    <section id="contact">
+        <h2>Contact information</h2>
+        <p>You can contact me in the following ways：</p>
+        <ul>
+            <li>mailbox: 1297926673@example.com</li>
+            <li>telephone: 19024855678</li>
+        </ul>
+    </section>
     <footer>
         <p>&copy; 2024 My Knowledge Base</p>
     </footer>
