--- a/index.html
+++ b/index.html
@@ -6,14 +6,53 @@
     <title>My Knowledge Base</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/pdfjs-dist@latest/build/pdf.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background: #35424a;
+            color: #ffffff;
+            padding: 20px 0;
+            text-align: center;
+        }
+        nav {
+            margin: 20px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            color: #ffffff;
+            text-decoration: none;
+        }
+        section {
+            padding: 20px;
+            background: #ffffff;
+            margin: 20px auto;
+            width: 80%;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        footer {
+            text-align: center;
+            padding: 10px 0;
+            background: #35424a;
+            color: #ffffff;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Welcome to My Knowledge Base</h1>
         <nav>
             <a href="#about">About me</a>
-            <a href="#projects">项目</a>
-            <a href="#contact">联系方式</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact information</a>
         </nav>
         <nav>
             <ul>
