--- a/Topics/topic3.html
+++ b/Topics/topic3.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Topic 3</title>
+    <title>泛函分析</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header>
-        <h1>Topic 3</h1>
+        <h1>泛函分析</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="topic1.html">Topic 1</a></li>
-                <li><a href="topic2.html">Topic 2</a></li>
+                <li><a href="../index.html">主页</a></li>
+                <li><a href="topic1.html">复变函数</a></li>
+                <li><a href="topic2.html">实变函数</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h2>Introduction to Topic3</h2>
-        <p>This is a detailed description of Topic 3.</p>
+        <h2>泛函分析介绍</h2>
+        <p>泛函分析（英语：Functional Analysis）是现代数学分析的一个分支，隶属于分析学，其研究的主要对象是函数构成的函数空间。
+            泛函分析历史根源是由对函数空间的研究和对函数的变换（如傅立叶变换等）的性质的研究。
+            这种观点被证明是对微分方程和积分方程的研究中特别有用。</p>
     </main>
     <footer>
         <p>&copy; 2024 My Knowledge Base</p>
