--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <main>
         <h2>主站</h2>
         <p>数学是研究数量、结构以及空间等概念及其变化的一门学科，属于形式科学的一种。数学利用抽象化和逻辑推理，从计数、计算、量度、对物体形状及运动的观察发展而成。数学家们拓展这些概念，以公式化新的猜想，以及从选定的公理及定义出发，严谨地推导出一些定理。</p>
-        <img src="image/test1.jpeg" alt="test Image" width="500" height="300">
+        <img src="image/true.png" alt="test Image" width="500" height="300">
         <h2>示例文档</h2>
         <p>你可以点击下方阅读该PDF文档:</p>
         <a href="documents/math.pdf" target="_blank">PDF</a>
