--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Math Knowledge Base</title>
+    <title>欢迎来到我的数学知识主站</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/pdfjs-dist@latest/build/pdf.js"></script>
     <style>
