--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Math Knowledge Base</h1>
+        <h1>欢迎来到我的数学知识主站</h1>
         <nav>
             <a href="#analysis">数学分析</a>
             <a href="#algebra">高等代数</a>
@@ -110,7 +110,7 @@
         </ul>
     </section>
     <footer>
-        <p>&copy; 2024 My Knowledge Base</p>
+        <p>&copy; 2024 我的数学知识主站</p>
     </footer>
     <script src="scripts/main.js" defer></script>
 </body>
