--- a/Topics/topic1.html
+++ b/Topics/topic1.html
@@ -24,7 +24,7 @@
             复变分析的应用领域较为广泛，在其它数学分支和物理学中也起着重要的作用。包括数论、应用数学、流体力学、热力学和电动力学。</p>
     </main>
     <footer>
-        <p>&copy; 2024 My Knowledge Base</p>
+        <p>&copy; 2024 我的数学知识主站</p>
     </footer>
 </body>
 </html>
