--- a/Topics/topic2.html
+++ b/Topics/topic2.html
@@ -24,7 +24,7 @@
             实函数的微分及积分、连续性、光滑性以及其他相关性质。实分析常以基础集合论，函数概念定义等等开始。</p>
     </main>
     <footer>
-        <p>&copy; 2024 My Knowledge Base</p>
+        <p>&copy; 2024 我的数学知识主站</p>
     </footer>
 </body>
 </html>
