--- a/Topics/topic3.html
+++ b/Topics/topic3.html
@@ -24,7 +24,7 @@
             这种观点被证明是对微分方程和积分方程的研究中特别有用。</p>
     </main>
     <footer>
-        <p>&copy; 2024 My Knowledge Base</p>
+        <p>&copy; 2024 我的数学知识主站</p>
     </footer>
 </body>
 </html>
